This fixes #301 collapse all signs while saving job as a pdf

--- a/imports/tablet/tablet.css
+++ b/imports/tablet/tablet.css
@@ -237,7 +237,7 @@
 .cardTitle {
     border-bottom: 1px solid #d2d2d2;
     /* background-color: rgb(5, 114, 204); */
-     color: #151515;
+    color: #151515;
     /* margin: -10px -10px 0 -10px; */
     /* border-radius: 5px; */
     /* padding: 5px; */
@@ -330,4 +330,10 @@
     border-radius: 5px;
     border: 1px solid rgb(223, 223, 223);
     overflow-y: scroll !important;
+}
+
+.need_collapse p {
+    border: 1px solid grey;
+    border-radius: 5px;
+    padding: 10px;
 }
